# wsl-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README-CN.md  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/prd-master/: SKILL.md
.agents/skills/prd-master/references/: acceptance-criteria.md  prioritization.md  user-stories.md
.agents/skills/rust-best-practices/: SKILL.md
.github/workflows/: windows-release.yml
docs/: dashboard-开发计划.md  phase2-traffic-monitor-design.md  privacy-policy.md  windows-admin-uac-方案.md  wsl-bridge-design.md  wsl-bridge-uiux-design.md  wsl-bridge-uiux-redesign.md  开发日志.md
publish/microsoft/: wsl-bridge 微软商店应用信息.csv  微软商店应用信息模版.csv
scripts/: tauri-runner.mjs
skills/prd-master/agents/: openai.yaml
skills/rust-best-practices/agents/: openai.yaml
skills/ui-ux-design-expert/: SKILL.md
skills/ui-ux-design-expert/agents/: openai.yaml
skills/ui-ux-design-expert/references/: design-tokens-template.md  mermaid-templates.md  wcag-checklist.md
src/: main.tsx  router.tsx  styles.css
src-tauri/app/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/icons/: icon.icns
src-tauri/app/src/: commands.rs  main.rs  mcp.rs  runtime_status.rs  state.rs  tauri_commands.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: app_logs.rs  engine.rs  firewall.rs  forwarder.rs  lib.rs  sqlite_store.rs  topology.rs  traffic.rs
src-tauri/crates/shared/: Cargo.toml
src/features/: ErrorPage.css  ErrorPage.tsx
src/features/dashboard/: DashboardPage.css  DashboardPage.tsx  TrafficChart.tsx
src/features/logs/: LogsPage.tsx
src/features/rules/: RulesPage.tsx  api.ts
src/features/runtime/: RuntimePage.tsx
src/features/settings/: SettingsPage.css  SettingsPage.tsx  api.ts
src/features/topology/: TopologyPage.css  TopologyPage.tsx  state.ts
src/i18n/: context.tsx  locale.ts
src/i18n/locales/: en-US.ts  ja-JP.ts  zh-CN.ts  zh-HK.ts
src/lib/: AppRuntimeBanner.tsx  Button.css  ContextMenu.css  ContextMenu.tsx  DropdownPanel.css  DropdownPanel.tsx  EllipsisCell.tsx  Form.css  Hint.tsx  Layout.css  Modal.css  NumberInput.css  NumberInput.tsx  SimpleSelect.tsx  Skeleton.css  Skeleton.tsx  Status.css  Table.css  Toast.css  Toast.tsx  Toggle.css  WindowCloseGuard.tsx  appRuntime.ts  bridge.ts  clarity.ts  datetime.ts  queryClient.ts  theme.tsx  types.ts  ui.tsx
(+2 files in other folders)
