[workspace]
members = [
    "src-tauri/app",
    "src-tauri/crates/core",
    "src-tauri/crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["wsl-bridge contributors"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["serde", "v4"] }

