[package]
name = "wsl-bridge-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata]
app = "wsl-bridge"

[features]
default = ["tauri"]
tauri = ["dep:tauri"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", optional = true , features = ["tray-icon"] }
tracing.workspace = true
uuid.workspace = true
wsl-bridge-core = { path = "../crates/core" }
wsl-bridge-shared = { path = "../crates/shared" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
