[package]
name = "wsl-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
wsl-bridge-shared = { path = "../shared" }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
